# ENS-GI-Digital-Twin

./: .coveragerc  .gitignore  .mcp.json  CHANGELOG.md  CODEBASE_AUDIT_REPORT.md  CONTRIBUTING.md  FIXES_APPLIED.md  HONEST_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REAL_DATA_READINESS_REPORT.md  REMAINING_ISSUES_PLAN.md  REMAINING_TASKS.md  RUN_TESTS.md  TEST_FIXES_SUMMARY.md  VERIFICATION_CHECKLIST.md  dashboard.jsx  environment.yml  pinn_zenodo_both_conditions.csv  pinn_zenodo_both_conditions.json  pyproject.toml  pytest.ini  requirements.txt  requirements_core.txt  requirements_minimal.txt  setup.py  setup_environment.bat  validation_gauntlet_results.json
.claude/: settings.local.json
.github/workflows/: tests.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/core/: config.yaml
docs/: api_reference.rst  biomarker_ranges.md  conf.py  contributing.md  index.rst  installation.md  quickstart.md  tutorials.md  user_guide.md  validation_report.md
examples/: basic_simulation_tutorial.ipynb  bayesian_tutorial.ipynb  clinical_parameter_estimation_workflow.py  clinical_workflow.ipynb  demo_all_features.py  hardware_export_tutorial.ipynb  pinn_tutorial.ipynb  test_spice_export.py  virtual_drug_trials_tutorial.ipynb
examples/spice_export/: quick_test.sp
patient_data/: P001_egg.csv  P001_hrm.csv  P002_egg.csv  P002_hrm.csv  P003_egg.csv  P003_hrm.csv  README.md  REAL001_egg.csv  REAL001_hrm.csv  REAL001_meta.json  REAL002_egg.csv  REAL002_hrm.csv  REAL002_meta.json  REAL003_egg.csv  REAL003_hrm.csv  REAL003_meta.json  REAL004_egg.csv  REAL004_hrm.csv  REAL004_meta.json  REAL005_egg.csv  REAL005_hrm.csv  REAL005_meta.json
scripts/: README.md  check_gpu.py  download_sparc_hrm.py  download_zenodo_egg.py  final_verification.py  manual_test.py  preflight_export_pipeline.py  prepare_real_patient_data.py  profile_performance.py  profile_pinn_microbatch.py  quick_test.py  summarize_sparc_hrm_cohort.py  train_pinn_from_patient_data.py  train_pinn_zenodo_cohort.py  triage_pytest_warnings.py  validate_layers_scientifically.py  validate_spice.py  validate_spice_netlist.py  validation_gauntlet.py  verify_installation.py
src/ens_gi_digital/: __init__.py  bayesian.py  clinical_workflow.py  core.py  drug_library.py  gpu_sim.py  patient_data.py  pinn.py  simulation_cache.py
tests/: README.md  __init__.py  conftest.py  test_bayesian.py  test_bayesian_integration.py  test_core.py  test_drug_library.py  test_hardware_export.py  test_patient_data.py  test_pinn.py  test_real_datasets.py  test_validation.py
verilog_a_library/: A_type_K.va  CaL_channel.va  KCa_channel.va  Kv_delayed_rectifier.va  NaV1_5.va  README.md  gap_junction.va  icc_fhn_oscillator.va  leak_channel.va
(+2 files in other folders)
