[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ens-gi-digital-twin"
version = "0.3.0"
description = "Physics-informed digital twin for enteric nervous system and GI motility"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mahdad"}
]
keywords = ["digital-twin", "neuroscience", "gastrointestinal", "IBS", "PINN", "bayesian-inference", "neuromorphic"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
pinn = [
    "tensorflow>=2.10.0",
    "scikit-learn>=1.0.0",
]
bayesian = [
    "pymc3>=3.11.0",
    "arviz>=0.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
all = [
    "tensorflow>=2.10.0",
    "scikit-learn>=1.0.0",
    "pymc3>=3.11.0",
    "arviz>=0.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Documentation = "https://ens-gi-digital-twin.readthedocs.io/"
Repository = "https://github.com/yourusername/ens-gi-digital-twin"
Issues = "https://github.com/yourusername/ens-gi-digital-twin/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (>10 seconds)",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "validation: marks validation tests",
    "hardware: marks hardware export tests (SPICE/Verilog-A)",
    "pinn: marks PINN framework tests",
    "bayesian: marks Bayesian inference tests",
    "drug: marks drug library tests",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | dist
  | build
)/
'''

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
